[package]
name = "clash-roam"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
netlink-proto = "0.11"
netlink-packet-core = "0.7"
netlink-packet-route = "0.17"
rtnetlink = "0.13"
futures = "0.3"
tokio = { version = "1.32", features = [ "rt", "macros" ] }
reqwest = { version = "0.11", default-features = false, features = [ "json" ]}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }
